welcome.lessons.welcome.variables.Variables.scala.error
Variables:7: error: '(' expected but identifier found.
while x !=0
      ^